# aifoundry-apps

./: .env.example  .gitignore  AGENTS.md  ENVIRONMENT_SETUP.md  README.md  azure.yaml
.github/workflows/: ci.yml
deployment/: README.md  USAGE.md  deploy.ps1  deploy.sh  docker-compose.yml  test-deployment.ps1  test-deployment.sh
infra/: abbreviations.json  main.bicep  main.json
infra/app/: backend.bicep  frontend.bicep
infra/core/host/: container-apps-environment.bicep  container-apps-logs.bicep  container-registry.bicep
src/backend/: AGENTS.md  Dockerfile  README.md  pyproject.toml
src/backend/app/: catalog.json  cosmos_service.py  featured.json  github_app.py  github_service.py  main.py  main_old.py  mcp_client.py  progress.py  specs.json  sync_catalog.py
src/backend/app/api/: dependencies.py
src/backend/app/api/routes/: agents.py  auth.py  github.py  post_training.py  progress.py  specs.py  templates.py  users.py
src/backend/app/core/: config.py
src/backend/app/data/: static_data.py
src/backend/app/models/: schemas.py
src/backend/app/services/: agent_service.py  auth_service.py  constitutional_service.py  spec_service.py  template_service.py
src/backend/tests/: conftest.py  test_spec_kit.py
src/frontend/: AGENTS.md  Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: AssignmentResult.tsx  AuthCallback.tsx  ConstitutionEditor.tsx  ConstitutionViewer.tsx  FeaturedTemplates.tsx  (+21 more)
(+7 files in other folders)
